--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,3 +13,8 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
