--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,10 +9,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Cache Modules
+      uses: actions/cache@v1
+      with:
+        path: node_modules
+        key: ${{ runner.OS }} -build-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.OS }}-build-
+          ${{ runner.OS }}-
+
+
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+
     - name: Install Dependencies
       run: npm install
 
