--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,7 +35,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run:
-        aws S3 cp \
-          --recursive \
-          --region ap-northeast-2 \
-          build s3://my-hobby-page-front
+        aws S3 sync ./dist/ s3://my-hobby-page-front --delete
